--- a/FNSProject/templates/above_footer.html
+++ b/FNSProject/templates/above_footer.html
@@ -4,7 +4,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3 col-12">
-          <a href="{% url 'home' %}"><img src="{% static 'KoreanLogo.png' %}" alt="logo" class="src mr-4 float-center float-md-right" width="170px"></a>
+          <a href="{% url 'home' %}"><img src="{% static 'account/logofile/koreanLogo.png' %}" alt="logo" class="src mr-4 float-center float-md-right" width="170px"></a>
           <!-- <a href="#"><img src="{% static 'KoreanLogo.png' %}" alt="logo" class="src mr-4" width="170px"></a> -->
         </div>
     
