--- a/FNSProject/templates/navbar.html
+++ b/FNSProject/templates/navbar.html
@@ -1,94 +1,98 @@
 {% load static %}
-<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top mx-0 px-0 pl-md-3">
-  
-    <a href="{% url 'home' %}"><img src="{% static 'HorizontalLogo.png' %}" alt="logo" 
-    class="src mr-5" height="50px" width="160px" class="mr-4"></a>
-  
-    <div class="text-muted mr-md-5 d-block d-md-none">
-      <!-- 만약 로그인이 됐다면 알람 나타내기 -->
-      {% if request.session.name %}
-      {% include 'alarm.html' %}
-      {% endif %}
-    </div>
-    <!-- 메뉴버튼 -->
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0 p-2">
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'playground_list' %}">구장대관<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'play' %}">플레이</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'teamMatching' %}" tabindex="-1" aria-disabled="true">팀매칭</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'recruiting' %}" tabindex="-1" aria-disabled="true">용병모집</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'league' %}" tabindex="-1" aria-disabled="true">밀어내기</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'team' %}" tabindex="-1" aria-disabled="true">팀 목록</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'individualRank' %}" tabindex="-1" aria-disabled="true">순위</a>
-        </li>
-        <li class="nav-item down d-none d-md-block">
-          <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">기타</a>
-          <div class="down-content">
-            <a class="nav-link" href="{% url 'decidedMatch' %}" tabindex="-1" aria-disabled="true">일정보기</a>
-            <a class="nav-link" href="{% url 'result' %}" tabindex="-1" aria-disabled="true">결과보기</a>
-            <a class="nav-link" href="{% url 'cs' %}" tabindex="-1" aria-disabled="true">문의하기</a>
-          </div>
-        </li>
-        
-        <li class="nav-item dropup d-block d-md-none">
-          <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">기타</a>
-          <div class="dropup-content">
-            <a class="nav-link" href="{% url 'decidedMatch' %}" tabindex="-1" aria-disabled="true">일정보기</a>
-            <a class="nav-link" href="{% url 'result' %}" tabindex="-1" aria-disabled="true">결과보기</a>
-            <a class="nav-link" href="{% url 'cs' %}" tabindex="-1" aria-disabled="true">문의하기</a>
-          </div>
-        </li>
-        {% if request.session.name %}
-          <li class="nav-item d-block d-md-none">
-            <a class="nav-link" href="{% url 'logout' %}" tabindex="-1" aria-disabled="true">로그아웃</a>
-          </li>
-          <li class="nav-item d-block d-md-none">
-            <a class="nav-link" href="{% url 'myPage' fnsuser.id %}" tabindex="-1" aria-disabled="true">마이페이지</a>
-          </li>
-        {% else %}
-          <li class="nav-item d-block d-md-none">
-            <a class="nav-link" href="{% url 'login' %}" tabindex="-1" aria-disabled="true">로그인</a>
-          </li>
-          <li class="nav-item d-block d-md-none">
-            <a class="nav-link" href="{% url 'register' %}" tabindex="-1" aria-disabled="true">회원가입</a>
-          </li>
-        {% endif %}
-      </ul>
-    </div>
-  
-    <div class="text-muted mr-md-5 d-none d-md-block">
-      <!-- 로그인 시 -->
-      {% if request.session.name %}
-        <a href="{% url 'logout' %}" class="text-decoration-none text-muted mr-md-3" tabindex="-1" aria-disabled="true">로그아웃</a> |
-        <a href="{% url 'myPage' fnsuser.id %}" class="text-decoration-none text-muted mr-md-5 ml-md-3" tabindex="-1" aria-disabled="true">마이페이지</a>
-      {% include 'alarm.html' %}
-  
-      <!-- 로그인 안되면 -->
-      {% else %}
-        <a href="{% url 'login' %}" class="text-decoration-none text-muted mr-md-3" tabindex="-1" aria-disabled="true">로그인</a> |
-        <a href="{% url 'register' %}" class="text-decoration-none text-muted mr-md-5 ml-md-3" tabindex="-1" aria-disabled="true">회원가입</a>
-      {% endif %}
-    </div>  
-    <div id="ex1" class="row justify-content-end">
-      <i class="fa fa-envelope fa-5x fa-border icon-grey badge pr-0 mr-0"></i>
-    </div>
+<style>
+  .navBar{
+    background-color: #F3F3F3;
+    height: 50px;
     
-  </nav>
+  }
+
+  .navDesign{
+    max-width: 720px;
+    width: 100%;
+    padding:10px;
+    margin:0 auto;
+    display: flex;
+    flex-direction: row;
+  }
+
+  .logo{
+    width: 177px;
+    vertical-align: middle;
+  }
+
+  .menu{
+    padding-top: 6px;
+    padding-right: 10px;
+    float:right;
+    color:gray;
+  }
+
+  .bell{
+    color:rgba(128, 128, 128, 0.808);
+    margin-top: 8px;
+    margin-left: 10px;
   
+  }
+
+  .p1[data-count]:after{
+    position:absolute;
+    right:10%;
+    top:0px;
+    content: attr(data-count);
+    font-size:40%;
+    padding:.2em;
+    border-radius:50%;
+    line-height:2em;
+    color: white;
+    background:rgba(255,0,0,.85);
+    text-align:center;
+    min-width: 2em;
+    font-weight:bold;
+  }
+
+</style>
+<nav class="navBar sticky-top">
+  <div class="navDesign">
+    <div style="width: 20%;">
+      {% if countNotification > 0 %}
+      <a href="{% url 'notification' %}">
+        <span class="bellNum p1 fa-stack has-badge" data-count="{{countNotification}}">
+          <i class="p3 far fa-lg fa-bell fa-stack-1x xfa-inverse" data-count="{{countNotification}}"></i>
+        </span>
+      </a>
+      {% else %}
+      <a href="{% url 'notification' %}">
+        <i class="bell far fa-lg fa-bell" style="z-index: 0;"></i>
+      </a>
+      {% endif %}
+    </div>
+    <div style="width: 60%;" class="d-flex justify-content-center">
+      <a href="{% url 'home' %}">
+        <img src="{% static 'account/logofile/oneLineLogo.png' %}" class="logo">
+      </a>
+    </div>
+    <div style="width: 20%;">
+      <a href="{% url 'menu' %}">
+        <i class="menu fas fa-lg fa-bars"></i>
+      </a>
+    </div>
+
+  </div>
+
+</nav>
+
+  
+<!--
+<span class="fa-stack"> 
+  <i class=" bell fa fa-bell fa-stack-1x"></i> 
+  <i class="fas fa-square fa-stack-lg"></i>
+</span>
+
+   {% if notificationList %}
+    <span class="bellNum p1 fa-stack has-badge" data-count="">
+      <i class="p3 far fa-lg fa-bell fa-stack-1x xfa-inverse" data-count="4b"></i>
+    </span>
+    {% else %}
+    <i class="bell far fa-lg fa-bell" style="z-index: 0;"></i>
+    {% endif %}
+-->
