--- a/account/templates/informationPolicy.html
+++ b/account/templates/informationPolicy.html
@@ -2,65 +2,65 @@
 {% block contents %}
 <div style="display: flex; flex-direction: row; justify-content: center;">
     <div class="policy">
-        <h1><b>개인정보처리방침</b></h1>
+        <h4><b>개인정보처리방침</b></h4>
         <hr>
-        <h2><b>1. 개인정보의 수집 및 이용목적</b></h2>
-        <h5>
+        <h5><b>1. 개인정보의 수집 및 이용목적</b></h5>
+        <h6>
             풋볼러버 Football Lover(이하 ‘풋볼러버’)는 개인정보취급방침을 통하여 이용자가 제공하는 
             개인정보가 어떠한 용도와 방식으로 이용되고 있으며, 개인정보보호를 위해 어떠한 조취가 
             취해지고 있는지 알려드립니다. 한국대학원리연구회는 이용자(홈페이지 회원)의 개인정보를 중요시하며, 
             정보통신망 이용촉진 및 정보보호에 관한 법률을 준수하고 있습니다. 풋볼러버는 개인정보취급방침을 
             개정하는 경우 웹사이트 공지사항(또는 개별공지)을 통하여 공지할 것입니다.
-        </h5>
+        </h6>
         <br>
-        <h5>
+        <h6>
             풋볼러버는 효과적인 정보 공유에 적합한 서비스를 제공하기 위하여 개인정보를 수집하고 있으며 
             수집된 정보를 아래와 같이 이용하고 있습니다. 이용자가 제공한 모든 정보는 하기 목적에 필요한 
             용도 이외로는 사용되지 않으며 이용 목적이 변경될 시에는 사전 동의를 구할 것입니다.
-        </h5>
+        </h6>
         <br>
-        <h5><b>(1) 회원관리</b></h5>
-        <h5>
+        <h6><b>(1) 회원관리</b></h6>
+        <h6>
             – 회원제 서비스 이용에 따른 본인확인, 본인의 의사확인, 이용자문의에 대한 응답, 
             새로운 정보의 소개 및 고지사항 전달
-        </h5>
+        </h6>
         <br>
-        <h5><b>(2) 서비스 제공에 관한 계약 이행 및 서비스 제공에 따른 요금정산</b></h5>
-        <h5>
+        <h6><b>(2) 서비스 제공에 관한 계약 이행 및 서비스 제공에 따른 요금정산</b></h6>
+        <h6>
             – 본인인증 및 컨텐츠 제공을 위한 개인식별, 회원간의 상호 연락 및 각종 맞춤형 서비스 제공, 
             구매 및 요금 결제, 부정 이용방지와 비인가 사용방지
-        </h5>
+        </h6>
         <br>
-        <h5><b>(3) 서비스 개발 및 마케팅ᆞ광고에의 활용</b></h5>
-        <h5>
+        <h6><b>(3) 서비스 개발 및 마케팅ᆞ광고에의 활용</b></h6>
+        <h6>
             – 맞춤 서비스 제공, 서비스 안내 및 이용권유, 서비스 개선 및 신규 서비스 개발을 위한 
             통계 및 접속빈도 파악, 통계학적 특성에 따른 광고 게재, 이벤트 정보 및 참여기회 제공
-        </h5>
+        </h6>
         <br>
-        <h5><b>(4) 관심사 및 활동동향 파악을 위한 통계학적 분석</b></h5>
+        <h6><b>(4) 관심사 및 활동동향 파악을 위한 통계학적 분석</b></h6>
 
         <hr>
-        <h2><b>2. 수집하는 개인정보 항목 및 수집방법</b></h2>
+        <h5><b>2. 수집하는 개인정보 항목 및 수집방법</b></h5>
         <br>
-        <h5>
+        <h6>
             ‘서비스’에서는 회원 가입 절차를 거쳐야 대부분의 콘텐츠에 자유롭게 접근할 수 있습니다.
-        </h5>
+        </h6>
         <br>
-        <h5><b>(1) 수집하는 개인정보의 항목</b></h5>
+        <h6><b>(1) 수집하는 개인정보의 항목</b></h6>
         <br>
-        <h5>
+        <h6>
             ① 회원가입 시 수집하는 항목
-        </h5>
+        </h6>
         <p>
-            – 이름, 아이디, 비밀번호, 이메일, 연락처, 활동지역, 소속, 비밀번호
+            – 이름, 아이디, 비밀번호, 이메일, 연락처, 활동지역, 소속, 생년월일
         </p>
         <p>
             – 페이스북, 네이버, 카카오 회원가입시 회원이 공개하기로 설정한 정보(선택가능)
         </p>
         <br>
-        <h5>
+        <h6>
             ② 유료 정보 이용 시 수집하는 항목
-        </h5>
+        </h6>
         <h6>
             유료 서비스 이용 과정에서 아래와 같은 결제 정보들이 수집될 수 있습니다.
         </h6>
@@ -74,49 +74,49 @@
             – 휴대전화 결제: 가입자명, 이동전화번호, 결제승인번호 등
         </p>
         <br>
-        <h5>
+        <h6>
             ③ 서비스 이용과정이나 사업처리 과정에서 아래와 같은 정보들이 자동으로 생성되어 수집될 수 있습니다.
-        </h5>
+        </h6>
         <p>
             – IP Address, 쿠키, 방문 일시, 서비스 이용 기록, 불량 이용 기록
         </p>
         <br>
-        <h5><b>(2) 개인정보 수집방법</b></h5>
+        <h6><b>(2) 개인정보 수집방법</b></h6>
         <br>
-        <h5>
+        <h6>
             - 홈페이지, 서비스 이용, 풋볼러버 주관행사, 이벤트 응모, 팩스, 우편, 전화, 고객센터 문의
-        </h5>
+        </h6>
         <hr>
 
-        <h2><b>3. 개인정보의 보유 및 이용기간</b></h2>
-        <h5>
+        <h5><b>3. 개인정보의 보유 및 이용기간</b></h5>
+        <h6>
             ‘서비스’는 회원가입일로부터 서비스를 제공하는 기간 동안에 한하여 이용자의 
             개인정보를 보유 및 이용하게 됩니다. 회원탈퇴를 하거나 개인정보의 수집 및 이용에 대한 
             동의를 철회하는 경우, 수집 및 이용목적이 달성되거나 이용기간이 종료된 경우 개인정보를 
             지체 없이 파기합니다. 단, 다음의 경우에 대해서는 각각 명시한 이유와 기간 동안 보존합니다.
-        </h5>
+        </h6>
         <br>
-        <h5>
+        <h6>
             <b>
                 (1) 상법 등 관계법령의 규정에 의하여 보존할 필요가 있는 경우 법령에서 
                 규정한 보존기간 동안 거래내역과 최소한의 기본정보를 보유합니다. 
                 이 경우 풋볼러버는 보관하는 정보를 그 보관의 목적으로만 이용합니다.
             </b>
-        </h5>
-        <h5>
+        </h6>
+        <h6>
             ① 계약 또는 청약철회 등에 관한 기록: 5년
-        </h5>
-        <h5>
+        </h6>
+        <h6>
             ② 대금결제 및 재화 등의 공급에 관한 기록: 5년
-        </h5>
-        <h5>
+        </h6>
+        <h6>
             ③ 소비자의 불만 또는 분쟁처리에 관한 기록: 3년
-        </h5>
-        <h5>
+        </h6>
+        <h6>
             ④ 부정이용 등에 관한 기록: 5년
-        </h5>
+        </h6>
         <br>
-        <h5>
+        <h6>
             <b>
                 (2) 풋볼러버는 정보통신망 이용촉진 및 정보보호 등에 관한 법률 제29조 제2항, 
                 동법 시행령 제16조에 따라 1년 동안 이타주의자들 서비스를 이용하지 않은 휴면이용자의 
@@ -124,79 +124,79 @@
                 다만, 보유기간을 미리 공지하고 그 보유기간이 경과하지 아니한 경우와 개별적으로 동의를 받은 경우에는 
                 약정한 기간 동안 보유합니다.
             </b>
-        </h5>
+        </h6>
         <br>
-        <h5>
+        <h6>
             <b>
                 (3) 회원 탈퇴한 경우, 즉시 개인정보에 대한 내용이 삭제됩니다.
             </b>
-        </h5>
+        </h6>
         <hr>
 
-        <h2><b>4. 개인정보 제공 및 공유</b></h2>
+        <h5><b>4. 개인정보 제공 및 공유</b></h5>
         <br>
-        <h5>
+        <h6>
             풋볼러버는 온라인, 오프라인을 통해 등록된 이용자 정보를 서비스 목적 이외의 
             용도로 제3자에게 매매하거나 대여하지 않습니다. 다만 다음과 같은 경우에는 예외로 합니다.
-        </h5>
+        </h6>
         <br>
-        <h5>
+        <h6>
             <b>
                 (1) 이용자가 사전에 공개에 동의한 경우
             </b>
-        </h5>
-        <h5>
+        </h6>
+        <h6>
             <b>
                 (2) 법령의 규정에 의거하거나, 수사 목적으로 법령에 정해진 절차와 
                 방법에 따라 수사기관의 요구가 있는 경우
             </b>
-        </h5>
+        </h6>
         <hr>
 
-        <h2><b>5. 개인정보 관리에 관한 사항</b></h2>
+        <h5><b>5. 개인정보 관리에 관한 사항</b></h5>
         <br>
-        <h5>
+        <h6>
             (1) 이용자는 언제든지 등록되어 있는 자신의 정보를 열람, 공개 및 비공개 처리, 수정, 삭제할 수 있습니다.
-        </h5>
-        <h5>
+        </h6>
+        <h6>
             (2) 이용자는 개인정보 조회/수정을 위해서는 ‘마이페이지’를 통하여 가능하며, 
             가입해지를 위해서는 ‘회원탈퇴’를 클릭하여 본인 확인 절차를 거친 후 직접 열람, 
             정정 또는 탈퇴가 가능합니다.
-        </h5>
-        <h5>
+        </h6>
+        <h6>
             (3) 이용자 ID, 비밀번호를 분실한 경우, ‘아이디 찾기/ 비밀번호 찾기’ 
             메뉴를 이용하여 확인할 수 있습니다.
-        </h5>
-        <h5>
+        </h6>
+        <h6>
             (4) 이용자가 개인정보의 오류에 대한 정정을 요청하신 경우에는 정정을 
             완료하기 전까지 당해 개인정보를 이용 또는 제공하지 않습니다.
-        </h5>
-        <h5>
+        </h6>
+        <h6>
             (5) 풋볼러버는 이용자 요청에 의해 해지 또는 삭제된 개인정보는 
             ‘3. 개인정보의 보유 및 이용기간’에 명시된 바에 따라 처리하고 그 외의 
             용도로 열람 또는 이용할 수 없도록 처리하고 있습니다.
-        </h5>
+        </h6>
         <hr>
 
-        <h2><b>6. 수집한 개인정보의 위탁</b></h2>
+        <h5><b>6. 수집한 개인정보의 위탁</b></h5>
         <br>
-        <h5>
+        <h6>
             풋볼러버는 이용자의 동의 없이 이용자의 정보를 외부 업체에 위탁하지 않습니다. 
             향후 그러한 필요가 생길 경우, 위탁 대상자와 위탁 업무 내용에 대해 이용자에게 통지하고 
             필요한 경우 사전 동의를 받도록 하겠습니다.
-        </h5>
+        </h6>
         <hr>
 
-        <h2><b>7. 개인정보 보호 정책에 관한 고충해결 및 문의</b></h2>
+        <h5><b>7. 개인정보 보호 정책에 관한 고충해결 및 문의</b></h5>
         <br>
-        <h5>
+        <h6>
             풋볼러버의 개인정보 보호정책에 관하여 문의나 의견이 있으신 분들은 풋볼러버 
             공식 이메일(fbloverofficial@gmail.com)로 알려 주십시오. 
             풋볼러버는 이용자들의 문의사항 및 신고사항에 대해 신속하게 충분한 답변을 드릴 것입니다.
-        </h5>
+        </h6>
         <hr>
 
-        <h2><b>※ 본 방침은 : 2020년 3월 19일부터 시행됩니다.</b></h2>
+        <h5><b>※ 본 방침은 : 2020년 3월 19일부터 시행됩니다.</b></h5>
 
 
         
