--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -11,7 +11,24 @@
         <!-- Google Font -->
         <link href="https://fonts.googleapis.com/css?family=Black+And+White+Picture|Black+Han+Sans|Cute+Font|Do+Hyeon|Dokdo|East+Sea+Dokdo|Gaegu|Gamja+Flower|Gothic+A1|Hi+Melody|Jua|Kirang+Haerang|Nanum+Brush+Script|Nanum+Gothic|Nanum+Gothic+Coding|Nanum+Myeongjo|Nanum+Pen+Script|Noto+Sans+KR|Noto+Serif+KR|Poor+Story|Single+Day|Song+Myung|Stylish|Sunflower:300|Yeon+Sung&display=swap" rel="stylesheet">
 
+        <style>
+                .pc{
+                       display: block;
+                }
 
+                .mobile{
+                        display: none;
+                }
+
+                @media only screen and (max-device-width : 720px) {
+                .pc{
+                        display: none;
+                }
+                .mobile{
+                        display: block;
+                }
+                }
+        </style>
 </head>
 <body>
   {% if errormessage %}
@@ -24,6 +41,7 @@
           alert("{{pwSuccess}}");
   </script>
   {% endif %}
+
       <form action="{% url 'login' %}" method="POST" class="login-form">
                       {% csrf_token %}
       <h4 style="font-family: 'Nanum Gothic';">풋볼러버에 로그인하세요.</h4>
@@ -53,6 +71,10 @@
              
       </div>
 </form>
+
+<footer class="mobile">
+        {% include 'playFooter.html' %}
+</footer>
 </body>
 </html>
 
