--- a/match/static/match/css/comment.css
+++ b/match/static/match/css/comment.css
@@ -1,6 +1,6 @@
   /*전체디자인*/
   .commentDesign{
-    padding:0;
+    padding:0.5rem;
     max-width: 720px;
     margin: 0 auto;
   }
@@ -20,7 +20,7 @@
     border-left: none;
     border-right: none;
     margin-left: 10px;
-    width: 100%;
+    width: 97%;
     outline: none;
     background:none;
     height:30px;
@@ -51,7 +51,7 @@
     border-left: none;
     border-right: none;
     margin-left: 10px;
-    width: 100%;
+    width: 97%;
     outline: none;
     background:none;
     height:30px;
@@ -94,7 +94,7 @@
     border-top: none;
     border-left: none;
     border-right: none;
-    width: 100%;
+    width: 97%;
     outline: none;
     background:none;
     margin-left: 10px;
@@ -125,7 +125,7 @@
     border-top: none;
     border-left: none;
     border-right: none;
-    width: 100%;
+    width: 97%;
     outline: none;
     background:none;
     margin-left: 10px;
@@ -212,13 +212,14 @@
 
   .comment{
     padding-left: 10px;
-    width: 90%;
+    width: 92%;
     padding-right: 10px;
     
   }
 
   .commentImg{
     width: 5%; 
+    margin-right: 0.3rem;
   }
 
   .commentText{
@@ -241,6 +242,7 @@
     font-size: 14px;
     font-family: 'Nanum Gothic';
     white-space: pre-line;
+    word-wrap: break-word;
     width: auto;
   }
   /*상세 댓글 끝*/ 
@@ -306,6 +308,13 @@
   /*자세히 보기 관련 끝 */
 
   @media screen and (max-width: 500px){
+    .comment{
+      padding-left: 10px;
+      width: 84%;
+      padding-right: 10px;
+      
+    }
+
     .commentBox textarea{
       font-family: 'Nanum Gothic';
       box-sizing:border-box;
@@ -314,7 +323,7 @@
       border-top: none;
       border-left: none;
       border-right: none;
-      width: 100%;
+      width: 97%;
       outline: none;
       background:none;
       height:30px;
@@ -330,7 +339,7 @@
       border-top: none;
       border-left: none;
       border-right: none;
-      width: 100%;
+      width: 97%;
       outline: none;
       background:none;
       height:30px;
@@ -346,7 +355,7 @@
       border-top: none;
       border-left: none;
       border-right: none;
-      width: 100%;
+      width: 97%;
       outline: none;
       background:none;
       height:30px;
@@ -362,7 +371,7 @@
       border-top: none;
       border-left: none;
       border-right: none;
-      width: 100%;
+      width: 97%;
       outline: none;
       background:none;
       height:30px;
