--- a/match/templates/personalMatching/personalNew.html
+++ b/match/templates/personalMatching/personalNew.html
@@ -89,7 +89,7 @@
 </div>
 <!--컨텐츠 영역-->
 
-<script>
+<script type="text/javascript">
     $.datepicker.setDefaults({
         dateFormat: 'yy년 mm월 dd일 (DD)',
         prevText: '이전 달',
